--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
 - if [ -n "${TRAVIS_TAG}" ]; then sed -i -- 's/1.0.0.0/'$TRAVIS_TAG'/g' CMD/Properties/AssemblyInfo.cs ; fi
 - if [ -n "${TRAVIS_TAG}" ]; then sed -i -- 's/1.0.0.0/'$TRAVIS_TAG'/g' EngineLayer/Properties/AssemblyInfo.cs ; fi
 - cat CMD/Properties/AssemblyInfo.cs
-- xbuild /p:Configuration=TestAndReleaseLinux MetaMorpheus.sln
+- msbuild /p:Configuration=TestAndReleaseLinux MetaMorpheus.sln
 - mono ./testrunner/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./Test/bin/Release/Test.dll
 - tar -zcvf MonoCommandLine.tar.gz -C CMD/bin/Release .
 deploy:
