--- a/Examples/Task1SearchExample.toml
+++ b/Examples/Task1SearchExample.toml
@@ -1,6 +1,6 @@
 ProductMassTolerance = "±0.0100 Absolute"
 ClassicSearch = true
-DoParsimony = false
+DoParsimony = true
 NoOneHitWonders = false
 Quantify = false
 QuantifyRtTol = 3.0
