--- a/CMD/packages.config
+++ b/CMD/packages.config
@@ -6,5 +6,6 @@
   <package id="mzLib" version="1.0.217" targetFramework="net451" />
   <package id="NetSerializer" version="4.1.0" targetFramework="net451" />
   <package id="Nett" version="0.7.0" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
