--- a/GUI/packages.config
+++ b/GUI/packages.config
@@ -4,5 +4,6 @@
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net451" />
   <package id="mzLib" version="1.0.217" targetFramework="net451" />
   <package id="Nett" version="0.7.0" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
