--- a/Examples/Task4GptmdExample.toml
+++ b/Examples/Task4GptmdExample.toml
@@ -1,13 +1,50 @@
-ProductMassTolerance = "±0.0100 Absolute"
-PrecursorMassTolerance = "±5.0000 PPM"
-DatabaseReferencesToKeep = [""]
-IsotopeErrors = false
-TaskType = "Gptmd"
 InitiatorMethionineBehavior = "Variable"
 MaxMissedCleavages = 2
+MinPeptideLength = 5
+ConserveMemory = true
 MaxModificationIsoforms = 4096
 Protease = "trypsin"
 BIons = true
 YIons = true
 ZdotIons = false
 CIons = false
+ListOfModsGptmd = "Glycan\tHexNAc on Nxs\t\tGlycan\tHexNAc on Nxt\t\tGlycan\tHexNAc on Nxc\t\tGlycan\tHexNAc on S\t\tGlycan\tHexNAc on T\t\tGlycan\tHex\t\tGlycan\tHex on K\t\tGlycan\tHex on Nxs\t\tGlycan\tHex on Nxt\t\tGlycan\tHex on S\t\tGlycan\tHex on T\t\tGlycan\tHex on W\t\tGlycan\tHex on C\t\tGlycan\tHex on R\t\tGlycan\tHex on Y\t\tGlycan\tHex(2)HexNAc(2)dHex(1) on Nxs\t\tGlycan\tHex(2)HexNAc(2)dHex(1) on Nxt\t\tGlycan\tHex(2)HexNAc(2)dHex(1) on S\t\tGlycan\tHex(2)HexNAc(2)dHex(1) on T\t\tGlycan\tHex(5)HexNAc(2) on Nxs\t\tGlycan\tHex(5)HexNAc(2) on Nxt\t\tGlycan\tHex(1)HexNAc(1)NeuAc(1) on Nxs\t\tGlycan\tHex(1)HexNAc(1)NeuAc(1) on Nxt\t\tGlycan\tHex(1)HexNAc(1)NeuAc(1) on S\t\tGlycan\tHex(1)HexNAc(1)NeuAc(1) on T\t\tGlycan\tHex(2)HexNAc(2) on Nxs\t\tGlycan\tHex(2)HexNAc(2) on Nxt\t\tGlycan\tHex(2)HexNAc(2) on S\t\tGlycan\tHex(2)HexNAc(2) on T\t\tGlycan\tHex(1)HexNAc(1) on Nxs\t\tGlycan\tHex(1)HexNAc(1) on Nxt\t\tGlycan\tHex(1)HexNAc(1) on S\t\tGlycan\tHex(1)HexNAc(1) on T\t\tGlycan\tHex(6)HexNAc(2) on Nxs\t\tGlycan\tHex(6)HexNAc(2) on Nxt\t\tGlycan\tGalactosyl\t\tGlycan\tGalactosyl on N-term\t\tGlycan\tHex(1)HexNAc(1)NeuAc(2) on Nxs\t\tGlycan\tHex(1)HexNAc(1)NeuAc(2) on Nxt\t\tGlycan\tHex(1)HexNAc(1)NeuAc(2) on S\t\tGlycan\tHex(1)HexNAc(1)NeuAc(2) on T\t\tGlycan\tHex(1)HexNAc(1)NeuAc(1)NeuGc(1) on S\t\tGlycan\tHex(1)HexNAc(1)NeuAc(1)NeuGc(1) on T\t\tGlycan\tHexNAc(2) on Nxs\t\tGlycan\tHexNAc(2) on Nxt\t\tGlycan\tHexNAc(2) on S\t\tGlycan\tHexNAc(2) on T\t\tGlycan\tHex(4)HexNAc(2) on Nxs\t\tGlycan\tHex(4)HexNAc(2) on Nxt\t\tGlycan\tdHex on Nxs\t\tGlycan\tdHex on Nxt\t\tGlycan\tdHex on S\t\tGlycan\tdHex on T\t\tGlycan\tGlucosylgalactosyl\t\tGlycan\tGlucuronyl on Nxs\t\tGlycan\tGlucuronyl on Nxt\t\tGlycan\tGlucuronyl on S\t\tGlycan\tGlucuronyl on T\t\tGlycan\tHex(1)HexNAc(1)NeuGc(1) on S\t\tGlycan\tHex(1)HexNAc(1)NeuGc(1) on T\t\tGlycan\tdHex(1)Hex(3)HexNAc(2) on Nxs\t\tGlycan\tdHex(1)Hex(3)HexNAc(2) on Nxt\t\tGlycan\tdHex(1)Hex(3)HexNAc(2) on S\t\tGlycan\tdHex(1)Hex(3)HexNAc(2) on T\t\tGlycan\tHexNAc(1)dHex(1) on Nxs\t\tGlycan\tHexNAc(1)dHex(1) on Nxt\t\tGlycan\tHexNAc(1)dHex(1) on S\t\tGlycan\tHexNAc(1)dHex(1) on T\t\tGlycan\tBacillosamine on Nxs\t\tGlycan\tBacillosamine on Nxt\t\tMod\tDeamidation on N\t\tMod\tDeamidation on Q\t\tMod\tAmmonia loss\t\tMod\tDioxidation on W\t\tMod\tDioxidation on P\t\tMod\tOxidation on Y\t\tMod\tOxidation on W\t\tMod\tOxidation on P\t\tMod\tOxidation on F\t\tMod\tOxidation on D\t\tMod\tOxidation on E\t\tMod\tOxidation on V\t\tMod\tOxidation on H\t\tMod\tCarbamidomethyl\t\tMod\tCarboxymethyl\t\tMod\tPhospho on S\t\tMod\tPhospho on T\t\tMod\tPhospho on Y\t\tMod\tAcetyllysine\t\tMod\tAcetylserine\t\tMod\tWater loss\t\tMod\tH-2 O1  on L\t\tMod\tH-2 O1  on I\t\tMod\tH-2 O1  on P\t\tMod\tH-2 O1  on W\t\tMod\tH-2 O1  on S\t\tMod\tOxidation of W to Kynurenine\t\tMod\tDehydroalanine from Cysteine\t\tMod\tMethyl on E\t\tMod\tMethyl on V\t\tMod\tMethyl on H\t\tMod\tMethyl on R\t\tMod\tMethyl on K\t\tMod\tMethyl on Q\t\tMod\tMethyl on N\t\tMod\tMethyl on S\t\tMod\tMethyl on D\t\tMod\tOxidation and then loss of oxidized M side chain\t\tMod\tDiMethyl on A\t\tMod\tDiMethyl on K\t\tMod\tDiMethyl on R\t\tMod\tDiMethyl on N\t\tMod\tTryptophan oxidation to hydroxykynurenin\t\tMod\tPyrrolidinone\t\tMod\tTriMethylation\t\tMod\tTrioxidation of C\t\tMod\tSulfonation on S\t\tMod\tSulfonation on T\t\tMod\tSulfonation on Y\t\tMod\tFarnesylation\t\tMod\tMyristoylation of G\t\tMod\tMyristoylation of K\t\tMod\tMyristoylation of C\t\tMod\tPalmitoylation of C\t\tMod\tPalmitoylation on K\t\tMod\tPalmitoylation on S\t\tMod\tPalmitoylation on T\t\tMod\tTopaquinone\t\tPeptideTermMod\tAmmonia loss on Q\t\tPeptideTermMod\tAmmonia loss on C\t\tPeptideTermMod\tCarbamidomethyl of peptide N term\t\tPeptideTermMod\tAcetald+26\t\tPeptideTermMod\tLysine not cleaved at C-term\t\tPeptideTermMod\tLysine not cleaved at N-term\t\tPeptideTermMod\tArginine not cleaved at N-term\t\tPeptideTermMod\tArginine not cleaved at C-term\t\tPeptideTermMod\tH-2 on pep term M\t\tPeptideTermMod\tWater loss on pep term E\t\tPeptideTermMod\tFormylation\t\tPeptideTermMod\tCarbamyl\t\tPeptideTermMod\tCarbon Adduct\t\tPeptideTermMod\tCarboxymethyl of peptide n term\t\tMetal\tSodium on D\t\tMetal\tSodium on E\t\tMetal\tCalcium on D\t\tMetal\tCalcium on E\t\tMetal\tZinc on D\t\tMetal\tZinc on E\t\tMetal\tFe[III] on D\t\tMetal\tFe[III] on E\t\tMetal\tFe[II] on D\t\tMetal\tFe[II] on E\t\tProteinTermMod\tAcetyl\t\tProteinTermMod\tAcetylation+Methionine\t\tProteinTermMod\tCarboxymethyl+Methionine\t\tProteinTermMod\tMet loss + Acetylation\t\tProteinTermMod\tMet loss + acetaldehyde"
+ProductMassTolerance = "±0.0100 Absolute"
+PrecursorMassTolerance = "±5.0000 PPM"
+ScoreCutoff = 5.0
+MaxDegreeOfParallelism = 1
+LocalizeAll = true
+ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C"
+ListOfModsVariable = "Common Variable\tOxidation of M"
+ListOfModsLocalize = ""
+TaskType = "Gptmd"
+DoPrecursorDeconvolution = true
+UseProvidedPrecursorInfo = true
+DeconvolutionIntensityRatio = 4.0
+DeconvolutionMaxAssumedChargeState = 10
+DeconvolutionMassTolerance = "±5.0000 PPM"
+
+[commonParameters]
+MaxDegreeOfParallelism = 1
+LocalizeAll = true
+ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C"
+ListOfModsVariable = "Common Variable\tOxidation of M"
+ListOfModsLocalize = ""
+DoPrecursorDeconvolution = true
+UseProvidedPrecursorInfo = true
+DeconvolutionIntensityRatio = 4.0
+DeconvolutionMaxAssumedChargeState = 10
+DeconvolutionMassTolerance = "±5.0000 PPM"
+InitiatorMethionineBehavior = "Variable"
+MaxMissedCleavages = 2
+MinPeptideLength = 5
+MaxModificationIsoforms = 4096
+TotalPartitions = 1
+Protease = "trypsin"
+BIons = true
+YIons = true
+ZdotIons = false
+CIons = false
+ProductMassTolerance = "±0.0100 Absolute"
+ConserveMemory = true
+ScoreCutoff = 5.0
