--- a/Examples/Task1SearchExample.toml
+++ b/Examples/Task1SearchExample.toml
@@ -34,6 +34,7 @@ CIons = false
 ProductMassTolerance = "±0.0100 Absolute"
 ConserveMemory = false
 ScoreCutoff = 5.0
+Max_mods_for_peptide = 0
 
 [searchParameters]
 DisposeOfFileWhenDone = false
