--- a/Examples/Task2CalibrationExample.toml
+++ b/Examples/Task2CalibrationExample.toml
@@ -25,7 +25,7 @@ DeconvolutionIntensityRatio = 4.0
 DeconvolutionMaxAssumedChargeState = 10
 DeconvolutionMassTolerance = "±5.0000 PPM"
 
-[commonParameters]
+[CommonParameters]
 MaxDegreeOfParallelism = 1
 LocalizeAll = true
 ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C"
