--- a/Examples/Task3SearchExample.toml
+++ b/Examples/Task3SearchExample.toml
@@ -10,7 +10,7 @@ DeconvolutionIntensityRatio = 4.0
 DeconvolutionMaxAssumedChargeState = 10
 DeconvolutionMassTolerance = "±5.0000 PPM"
 
-[commonParameters]
+[CommonParameters]
 MaxDegreeOfParallelism = 1
 LocalizeAll = true
 ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C"
@@ -35,7 +35,7 @@ ProductMassTolerance = "±0.0100 Absolute"
 ConserveMemory = false
 ScoreCutoff = 5.0
 
-[searchParameters]
+[SearchParameters]
 DisposeOfFileWhenDone = false
 AddCompIons = false
 DoParsimony = false
