--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -202,12 +202,14 @@
     </Content>
     <Content Include="Data\PSI-MOD.obo.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SonarQubeExclude>true</SonarQubeExclude>
     </Content>
     <Content Include="Data\ptmlist.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\unimod.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SonarQubeExclude>true</SonarQubeExclude>
     </Content>
     <Content Include="Mods\aListOfmods.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
