--- a/Examples/Task2CalibrationExample.toml
+++ b/Examples/Task2CalibrationExample.toml
@@ -1,32 +1,12 @@
-InitiatorMethionineBehavior = "Variable"
-MaxMissedCleavages = 2
-ConserveMemory = true
-MinPeptideLength = 5
-MaxModificationIsoforms = 4096
-Protease = "trypsin"
-BIons = true
-YIons = true
-ZdotIons = false
-CIons = false
-ProductMassTolerance = "±0.0100 Absolute"
+TaskType = "Calibrate"
+
+[CalibrationParameters]
 PrecursorMassTolerance = "±10.0000 PPM"
 NonLinearCalibration = true
 WriteIntermediateFiles = false
-ScoreCutoff = 5.0
-MaxDegreeOfParallelism = -1
-LocalizeAll = true
-ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C"
-ListOfModsVariable = "Common Variable\tOxidation of M"
-ListOfModsLocalize = ""
-TaskType = "Calibrate"
-DoPrecursorDeconvolution = true
-UseProvidedPrecursorInfo = true
-DeconvolutionIntensityRatio = 4.0
-DeconvolutionMaxAssumedChargeState = 10
-DeconvolutionMassTolerance = "±5.0000 PPM"
 
 [CommonParameters]
-MaxDegreeOfParallelism = 1
+MaxDegreeOfParallelism = -1
 LocalizeAll = true
 ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C"
 ListOfModsVariable = "Common Variable\tOxidation of M"
@@ -49,3 +29,4 @@ CIons = false
 ProductMassTolerance = "±0.0100 Absolute"
 ConserveMemory = true
 ScoreCutoff = 5.0
+Max_mods_for_peptide = 0
