updated quantification unit test

--- a/Examples/Task5SearchExample.toml
+++ b/Examples/Task5SearchExample.toml
@@ -6,7 +6,7 @@ AddCompIons = false
 DoParsimony = true
 ModPeptidesAreUnique = true
 NoOneHitWonders = false
-MatchBetweenRuns = false
+MatchBetweenRuns = true
 QuantifyPpmTol = 5.0
 DoHistogramAnalysis = false
 SearchTarget = true
