should be covered by SlicedTest1

--- a/Test/SlicedSearchTaskConfig.toml
+++ b/Test/SlicedSearchTaskConfig.toml
@@ -31,7 +31,7 @@ AddCompIons = false
 DoParsimony = true
 ModPeptidesAreUnique = false
 NoOneHitWonders = false
-MatchBetweenRuns = false
+MatchBetweenRuns = true
 QuantifyPpmTol = 5.0
 DoHistogramAnalysis = false
 SearchTarget = true
