--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -96,6 +96,7 @@
     <Compile Include="FdrTest.cs" />
     <Compile Include="BinGenerationTest.cs" />
     <Compile Include="SeqCoverageTest.cs" />
+    <Compile Include="SearchWithPeptidesAddedInParsimony.cs" />
     <Compile Include="StefanParsimonyTest.cs" />
     <Compile Include="SlicedTest.cs" />
     <Compile Include="FakeMsDataFile.cs" />
