--- a/Test/testFileSpecfic.toml
+++ b/Test/testFileSpecfic.toml
@@ -1,40 +1,1 @@
-DisposeOfFileWhenDone = true
-InitiatorMethionineBehavior = "Variable"
-MaxMissedCleavages = 2
-MinPeptideLength = 5
-MaxModificationIsoforms = 4096
-TotalPartitions = 1
-Protease = "TestCustomProtease"
-AddCompIons = false
-BIons = true
-YIons = true
-ZdotIons = false
-CIons = false
-ProductMassTolerance = "±0.0100 Absolute"
-DoParsimony = false
-ModPeptidesAreUnique = true
-NoOneHitWonders = false
-MatchBetweenRuns = false
-QuantifyPpmTol = 5.0
-DoHistogramAnalysis = false
-SearchTarget = true
-SearchDecoy = true
-MassDiffAcceptors = ["5ppmAroundZero ppmAroundZero 5"]
-ConserveMemory = true
-WritePrunedDatabase = false
-KeepAllUniprotMods = true
-DoLocalizationAnalysis = true
-DoQuantification = false
-SearchType = "Classic"
-ScoreCutoff = 5.0
-MaxDegreeOfParallelism = 1
-LocalizeAll = true
-ListOfModsFixed = "Common Fixed\tCarbamidomethyl of C"
-ListOfModsVariable = "Common Variable\tOxidation of M"
-ListOfModsLocalize = ""
-TaskType = "Search"
-DoPrecursorDeconvolution = true
-UseProvidedPrecursorInfo = true
-DeconvolutionIntensityRatio = 4.0
-DeconvolutionMaxAssumedChargeState = 10
-DeconvolutionMassTolerance = "±5.0000 PPM"
+Protease = "AspN"
