--- a/Examples/Task5SearchExample.toml
+++ b/Examples/Task5SearchExample.toml
@@ -11,7 +11,7 @@ QuantifyPpmTol = 5.0
 DoHistogramAnalysis = false
 SearchTarget = true
 SearchDecoy = true
-MassDiffAcceptors = ["5ppmAroundZero ppmAroundZero 5"]
+MassDiffAcceptors = "5ppmAroundZero ppmAroundZero 5"
 WritePrunedDatabase = true
 KeepAllUniprotMods = true
 DoLocalizationAnalysis = true
