--- a/EngineLayer/packages.config
+++ b/EngineLayer/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FlashLFQ" version="1.0.86" targetFramework="net451" />
+  <package id="FlashLFQ" version="1.0.90" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net451" />
   <package id="mzLib" version="1.0.223" targetFramework="net451" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" />
+  <package id="Zlib.Portable" version="1.11.0" targetFramework="net451" />
 </packages>
